gcc/testsuite/rust/rustc/ui/typeck/issue-87872-missing-inaccessible-field-literal.rs
pub mod foo {
    pub struct Foo {
        pub you_can_use_this_field: bool,
        you_cant_use_this_field: bool,
    }
}

fn main() {
    foo::Foo {};
// { dg-error "" "" { target *-*-* } .-1 }
}

